[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim2sim-locomotion"
version = "0.1.0"
description = "Evaluate a single locomotion policy across multiple physics simulators (sim-to-sim)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dora-rs contributors" }]
keywords = ["robotics", "locomotion", "sim-to-sim", "reinforcement-learning", "mujoco", "pybullet", "genesis", "isaac"]

# Core deps are deliberately tiny: a MuJoCo-only or Isaac-only user should never
# be forced to install the other simulators. Backends live in extras below.
dependencies = [
    "numpy>=1.23",
    "onnxruntime>=1.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mujoco = ["mujoco>=3.0"]
pybullet = ["pybullet>=3.2"]
mjlab = ["mjlab"]                     # requires NVIDIA GPU + CUDA (MuJoCo-Warp); where LeRobot legged trains
genesis = ["genesis-world>=0.2"]      # requires NVIDIA GPU + CUDA at runtime
isaac = []                            # Isaac Lab is installed out-of-band (NVIDIA stack); see README
all-cpu = ["mujoco>=3.0", "pybullet>=3.2"]
report = ["matplotlib>=3.6"]
dev = ["pytest>=7.0", "ruff>=0.4", "matplotlib>=3.6", "mujoco>=3.0", "pybullet>=3.2", "onnx>=1.14"]

[project.scripts]
sim2sim = "sim2sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sim2sim = ["assets/**/*"]

[tool.pytest.ini_options]
markers = [
    "gpu: tests that require an NVIDIA GPU + CUDA (Genesis / Isaac Lab); skipped by default",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
