[package]
name = "adora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "adora"
path = "src/main.rs"

[features]
default = ["tracing", "metrics", "redb-backend"]
tracing = ["dep:adora-tracing"]
metrics = ["adora-runtime/metrics", "adora-coordinator/prometheus"]
python = ["pyo3"]
# Enable extension-module only when building the Python wheel via maturin.
# This suppresses Python library linking, which is correct for cdylib targets
# loaded into Python but breaks standalone binary and test builds.
python-extension-module = ["python", "pyo3/extension-module"]
redb-backend = ["adora-coordinator/redb-backend", "dep:libc"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
clap = { version = "4.0.3", features = ["derive", "string", "env"] }
clap_complete = "4.5.61"
eyre = { workspace = true }
libc = { version = "0.2", optional = true }
adora-core = { workspace = true, features = ["zenoh"] }
adora-message = { workspace = true }
adora-node-api-c = { workspace = true }
adora-operator-api-c = { workspace = true }
adora-download = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
webbrowser = "0.8.3"
serde_json = { workspace = true }
termcolor = "1.1.3"
uuid = { workspace = true }
inquire = { workspace = true }
tokio-tungstenite = "0.28"
notify = "5.1.0"
ctrlc = "3.2.5"
tracing = { workspace = true }
tracing-log = "0.2.0"
adora-tracing = { workspace = true, optional = true }
adora-daemon = { workspace = true }
adora-coordinator = { workspace = true }
adora-runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util", "net"] }
futures = { workspace = true }
duration-str = "0.5"
tabwriter = "1.4.0"
log = { version = "0.4.21", features = ["serde"] }
colored = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.29.0"
itertools = "0.14"
sysinfo = "0.36.1"

env_logger = "0.11.3"
self_update = { version = "0.42.0", features = [
    "rustls",
    "archive-zip",
    "archive-tar",
    "compression-flate2",
], default-features = false }
pyo3 = { workspace = true, features = [
    "abi3",
], optional = true }
self-replace = "1.5.0"
dunce = "1.0.5"
git2 = { workspace = true }
zenoh = { workspace = true }
arrow-json.workspace = true
chrono = "0.4.42"
adora-recording = { workspace = true }
which = "7"
tempfile = { workspace = true }
sha2 = "0.10"

[build-dependencies]

[lib]
name = "adora_cli"
path = "src/lib.rs"
# cdylib is required by maturin for the Python wheel build.
# Cargo builds all listed crate-types for the lib target, so this adds
# a small overhead to every build.  The alternative (removing cdylib and
# using a wrapper crate) is more complex and breaks the pyproject.toml
# scripts entry that provides the `adora` console command.
crate-type = ["lib", "cdylib"]

[package.metadata.dist]
# Enable adora-cli binary to be distributed
dist = true
