[package]
name = "dora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dora"
path = "src/main.rs"

[features]
default = ["tracing", "metrics", "redb-backend"]
tracing = ["dep:dora-tracing"]
metrics = ["dora-runtime/metrics", "dora-coordinator/prometheus"]
python = ["pyo3"]
# Enable extension-module only when building the Python wheel via maturin.
# This suppresses Python library linking, which is correct for cdylib targets
# loaded into Python but breaks standalone binary and test builds.
python-extension-module = ["python", "pyo3/extension-module"]
redb-backend = ["dora-coordinator/redb-backend", "dep:libc"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
clap = { version = "4.0.3", features = ["derive", "string", "env"] }
clap_complete = "4.5.61"
eyre = { workspace = true }
libc = { version = "0.2", optional = true }
dora-core = { workspace = true, features = ["zenoh"] }
dora-message = { workspace = true }
dora-node-api-c = { workspace = true }
dora-operator-api-c = { workspace = true }
dora-download = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
webbrowser = "0.8.3"
serde_json = { workspace = true }
termcolor = "1.1.3"
uuid = { workspace = true }
inquire = { workspace = true }
tokio-tungstenite = "0.28"
notify = "5.1.0"
ctrlc = "3.2.5"
tracing = { workspace = true }
tracing-log = "0.2.0"
dora-tracing = { workspace = true, optional = true }
dora-daemon = { workspace = true }
dora-coordinator = { workspace = true }
dora-runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util", "net"] }
futures = { workspace = true }
duration-str = "0.5"
tabwriter = "1.4.0"
log = { version = "0.4.21", features = ["serde"] }
colored = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.30.0"
itertools = "0.14"
sysinfo = "0.36.1"

env_logger = "0.11.3"
self_update = { version = "0.42.0", features = [
    "rustls",
    "archive-zip",
    "archive-tar",
    "compression-flate2",
], default-features = false }
pyo3 = { workspace = true, features = [
    "abi3",
], optional = true }
self-replace = "1.5.0"
dunce = "1.0.5"
git2 = { workspace = true }
zenoh = { workspace = true }
arrow-json.workspace = true
chrono = "0.4.42"
dora-recording = { workspace = true }
which = "7"
tempfile = { workspace = true }

[build-dependencies]

[lib]
name = "dora_cli"
path = "src/lib.rs"
# cdylib is required by maturin for the Python wheel build.
# Cargo builds all listed crate-types for the lib target, so this adds
# a small overhead to every build.  The alternative (removing cdylib and
# using a wrapper crate) is more complex and breaks the pyproject.toml
# scripts entry that provides the `dora` console command.
crate-type = ["lib", "cdylib"]

[package.metadata.dist]
# Enable dora-cli binary to be distributed
dist = true
