[package]
name = "dora-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dora"
path = "src/main.rs"

[features]
default = ["tracing", "metrics", "redb-backend"]
tracing = ["dep:dora-tracing"]
metrics = ["dora-runtime/metrics", "dora-coordinator/metrics"]
python = ["pyo3"]
# Enable extension-module only when building the Python wheel via maturin.
# This suppresses Python library linking, which is correct for cdylib targets
# loaded into Python but breaks standalone binary and test builds.
python-extension-module = ["python", "pyo3/extension-module"]
redb-backend = ["dora-coordinator/redb-backend", "dep:libc"]

[dependencies]
arrow = { workspace = true, features = ["ipc"] }
arrow-schema = { workspace = true }
clap = { version = "4.6.1", features = ["derive", "string", "env"] }
clap_complete = "4.6.7"
eyre = { workspace = true }
libc = { version = "0.2", optional = true }
dora-core = { workspace = true, features = ["zenoh"] }
dora-hub-client = { workspace = true }
dora-message = { workspace = true }
dora-node-api-c = { workspace = true }
dora-operator-api-c = { workspace = true }
dora-download = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = "1.1"
webbrowser = "1.2.1"
serde_json = { workspace = true }
sha2 = "0.11"
termcolor = "1.4.1"
uuid = { workspace = true }
inquire = { workspace = true }
tokio-tungstenite = "0.29"
notify = "8.2.0"
ctrlc = "3.5.2"
tracing = { workspace = true }
tracing-log = "0.2.0"
dora-tracing = { workspace = true, optional = true }
dora-daemon = { workspace = true }
dora-coordinator = { workspace = true }
dora-runtime = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util", "net"] }
futures = { workspace = true }
duration-str = "0.21"
tabwriter = "1.4.1"
log = { version = "0.4.33", features = ["serde"] }
colored = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.30.2"
itertools = "0.15"
sysinfo = "0.38.4"

env_logger = "0.11.11"
# self_update 0.44 made the HTTP backend an explicit feature; without
# `reqwest` (or `ureq`) it fails to compile under default-features = false.
self_update = { version = "0.44.0", features = [
    "reqwest",
    "rustls",
    "archive-zip",
    "archive-tar",
    "compression-flate2",
], default-features = false }
pyo3 = { workspace = true, features = [
    "abi3",
], optional = true }
self-replace = "1.5.0"
dunce = "1.0.5"
git2 = { workspace = true }
zenoh = { workspace = true }
arrow-json.workspace = true
chrono = "0.4.45"
dora-recording = { workspace = true }
which = "8"
tempfile = { workspace = true }

[build-dependencies]

[lib]
name = "dora_cli"
path = "src/lib.rs"
# cdylib is required by maturin for the Python wheel build.
# Cargo builds all listed crate-types for the lib target, so this adds
# a small overhead to every build.  The alternative (removing cdylib and
# using a wrapper crate) is more complex and breaks the pyproject.toml
# scripts entry that provides the `dora` console command.
crate-type = ["lib", "cdylib"]

[package.metadata.dist]
# Enable dora-cli binary to be distributed
dist = true

[dev-dependencies]
tempfile = { workspace = true }
