[build-system]
requires = ["maturin>=0.13.2"]
build-backend = "maturin"

[project]
name = "dora-rs-cli"
dynamic = ["version"]
scripts = { "dora" = "dora_cli:py_main" }
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ['dora-rs >= 0.3.9', 'uv']

[tool.maturin]
features = ["python", "pyo3/extension-module"]

[tool.ruff.lint]
extend-select = [
  "D",  # pydocstyle
  "UP",
]

[tool.maturin.target.x86_64-apple-darwin]
# macOS deployment target SDK version
macos-deployment-target = "14.5"

[tool.maturin.target.aarch64-apple-darwin]
# macOS deployment target SDK version
macos-deployment-target = "14.5"
