[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dora-rs-cli"
dynamic = ["version"]
scripts = { "dora" = "dora_cli:py_main" }
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ['dora-rs >= 0.3.9', 'uv']

[tool.maturin]
features = ["python", "pyo3/extension-module"]

[tool.ruff.lint]
extend-select = [
  "D",  # pydocstyle
  "UP",
]
