[build-system]
requires = ["maturin>=0.13.2"]
build-backend = "maturin"

[project]
name = "adora-rs-cli"
dynamic = ["version"]
scripts = { "adora" = "adora_cli:py_main" }
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ['adora-rs >= 0.3.9', 'uv']

[tool.maturin]
bindings = "pyo3"
features = ["python-extension-module"]

[tool.ruff.lint]
extend-select = [
  "D",  # pydocstyle
  "UP",
]
