[package]
name = "adora-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing"]
tracing = ["dep:adora-tracing"]
redb-backend = ["adora-coordinator-store/redb-backend"]
prometheus = ["dep:prometheus"]

[dependencies]
eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util", "net"] }
uuid = { workspace = true, features = ["v4"] }
adora-core = { workspace = true, features = ["build", "zenoh"] }
tracing = { workspace = true }
adora-tracing = { workspace = true, optional = true }
futures-concurrency = "7.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
petname = "2.0.2"
ctrlc = "3.2.5"
log = { version = "0.4.21", features = ["serde"] }
adora-message = { workspace = true }
adora-coordinator-store = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
indexmap = "2"
itertools = "0.14.0"
zenoh = { workspace = true }
bincode = { workspace = true }
prometheus = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-tungstenite = "0.28"
