[package]
name = "dora-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing"]
tracing = ["dep:dora-tracing"]
redb-backend = ["dora-coordinator-store/redb-backend"]
metrics = ["dep:opentelemetry", "dep:dora-metrics"]

[dependencies]
eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util", "net"] }
uuid = { workspace = true, features = ["v4"] }
dora-core = { workspace = true, features = ["build", "zenoh"] }
tracing = { workspace = true }
dora-tracing = { workspace = true, optional = true }
futures-concurrency = "7.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
petname = "3.1.0"
ctrlc = "3.5.2"
log = { version = "0.4.33", features = ["serde"] }
dora-message = { workspace = true }
dora-coordinator-store = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors"] }
indexmap = "2"
itertools = "0.15.0"
zenoh = { workspace = true }
bincode = { workspace = true }
opentelemetry = { version = "0.31", features = ["metrics"], optional = true }
dora-metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-tungstenite = "0.29"
