[package]
name = "dora-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing", "telemetry"]
tracing = ["dep:dora-tracing"]
bench = []
# telemetry flag enables to trace dora-daemon as well as send ticks with opentelemetry context
# for distributed tracing.
telemetry = ["dep:tracing-opentelemetry"]

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }
futures-concurrency = "7.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
dora-core = { workspace = true, features = ["build", "zenoh"] }
flume = { workspace = true }
dora-download = { workspace = true }
dora-tracing = { workspace = true, optional = true }
dora-arrow-convert = { workspace = true }
dora-node-api = { workspace = true }
dora-message = { workspace = true }
dora-memory-pool = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
shared_memory_extended = "0.13.0"
bincode = { workspace = true }
aligned-vec = "0.6.4"
ctrlc = "3.5.2"
which = "8"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
url = "2.5.8"
git2 = { workspace = true }
dunce = "1.0.5"
itertools = "0.15"
process-wrap = { version = "9.1.0", features = ["tokio1"] }
memchr = "2.8.2"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1.2"
shlex = "2"
sysinfo = "0.38.4"
clonable-command = "0.2.0"
tokio-tungstenite = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
# `test-util` enables `start_paused` so the 30s TCP read-timeout guard can be
# exercised without a real 30s wait (socket_stream_utils tests, #2027).
tokio = { workspace = true, features = ["full", "test-util"] }

[[bench]]
name = "routing"
harness = false
required-features = ["bench"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
] }
