[package]
name = "dora-mavlink2-bridge-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MAVLink 2 ↔ dora bridge node, daemon-spawnable"

[dependencies]
dora-mavlink2-bridge = { workspace = true }
dora-node-api = { workspace = true }
mavlink = { workspace = true }
arrow = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
