[package]
name = "adora-replay-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Replay node binary for adora dataflow recordings"
license.workspace = true
repository.workspace = true

[[bin]]
name = "adora-replay-node"
path = "src/main.rs"

[dependencies]
adora-node-api = { workspace = true, default-features = false }
adora-recording = { workspace = true }
adora-message = { workspace = true }
eyre = { workspace = true }
bincode = { workspace = true }
