[package]
name = "dora-replay-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
description = "Replay node binary for dora dataflow recordings"
license.workspace = true
repository.workspace = true

[[bin]]
name = "dora-replay-node"
path = "src/main.rs"

[dependencies]
dora-node-api = { workspace = true, default-features = false }
dora-recording = { workspace = true }
dora-message = { workspace = true }
eyre = { workspace = true }
bincode = { workspace = true }
