[package]
name = "adora-ros2-bridge-node"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "adora-ros2-bridge-node"
path = "src/main.rs"

[dependencies]
adora-node-api = { workspace = true }
adora-ros2-bridge = { path = "../../libraries/extensions/ros2-bridge", default-features = false }
adora-ros2-bridge-arrow = { path = "../../libraries/extensions/ros2-bridge/arrow" }
adora-ros2-bridge-msg-gen = { workspace = true }
adora-message = { workspace = true }
arrow = { workspace = true }
eyre = { workspace = true }
flume = "0.11"
futures = { workspace = true }
futures-timer = "3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
